--- a/package.json
+++ b/package.json
@@ -1,37 +1,20 @@
 {
   "name": "boogaloo",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A slide deck",
   "homepage": "https://github.com/bodil/boogaloo",
   "author": "Bodil Stokke",
   "licenses": [
-    "GPL-3",
-    "MIT"
+    "GPL-3.0+"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/bodil/boogaloo.git"
   },
   "scripts": {
-    "webpack": "webpack --config config/webpack.config.js --colors --progress",
-    "install": "npm run webpack",
-    "start": "webpack-dev-server --config config/webpack.config.js --port 1337"
-  },
-  "devDependencies": {
-    "webpack": "~1.0.5",
-    "webpack-dev-server": "~1.2.3",
-    "less-loader": "~0.7.1",
-    "css-loader": "~0.6.8",
-    "style-loader": "~0.6.3",
-    "url-loader": "~0.5.3",
-    "json-loader": "~0.5.0",
-    "raw-loader": "~0.5.1"
+    "start": "pink run slides.js"
   },
   "dependencies": {
-    "traceur": "~0.0.25",
-    "codemirror": "~3.22.0",
-    "spin.js": "~1.3.2",
-    "tern": "~0.5.0",
-    "underscore": "~1.6.0"
+    "pink": "~0.0.1"
   }
 }
